# necromyth-engine

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  imgui.ini
shaders/: debug_line.slang  particle_billboard.slang  point_shadow.slang  shadow_depth.slang  shadow_depth_skinned.slang  sky.slang  triangle.slang  triangle_nopt.slang  triangle_skinned.slang
shaders/lib/: frame_uniforms.slang  lighting.slang  mesh_types.slang  mesh_types_skinned.slang  shadow.slang  shadow_vp.slang  skinning.slang  surface.slang  textured_bindings.slang  textured_push_constants.slang  triangle_body.slang
src/: app.hpp  demo_scene.hpp  engine_config.hpp  main.cpp
src/audio/: audio_engine.hpp  audio_engine_impl.cpp
src/physics/: hitbox_manager.hpp  physics_world.hpp
src/platform/: engine_runtime.hpp  fly_camera.hpp  gpu_cli.hpp  input_map.hpp  sdl_window.hpp  timer_sync.hpp
src/renderer/: bone_buffer.hpp  buffer.hpp  depth_image.hpp  descriptors.hpp  draw_list.hpp  frame_overlay.hpp  gltf_loader.hpp  gltf_loader_impl.cpp  gpu_particle.hpp  graphics_pipeline.hpp  image_barrier.hpp  light_buffer.hpp  mesh_gpu.hpp  model_loader.hpp  msaa_color_image.hpp  particle_system.hpp  pass_recorder.hpp  pipeline_id.hpp  pipeline_registry.hpp  render_color_image.hpp  render_host.hpp  render_settings.hpp  scene_gpu.hpp  shadow_map.hpp  swapchain.hpp  texture_array.hpp  texture_image.hpp  texture_table.hpp  textured_push_constants.hpp  uniform_buffer.hpp  vertex.hpp  vertex_attributes.hpp  vulkan_context.hpp  vulkan_device.hpp
src/scene/: animation_state_machine.hpp  animation_types.hpp  animation_utils.hpp  camera.hpp  directional_light.hpp  floor_mesh.hpp  mesh_instance.hpp  mesh_source.hpp  point_light.hpp  render_layer.hpp  scene.hpp  shadow_utils.hpp  sky_mesh.hpp  spot_light.hpp  upright_quad_mesh.hpp
